--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,46 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto');
+
+body {
+  font-family: Roboto, serif;
+  letter-spacing: 1px;
+}
+
+a {
+  text-decoration: none;
+  color: #8B3A3A;
+}
+
+h2 {
+  font-family: Montserrat, serif;
+  font-size: 25px;
+  letter-spacing: 1px;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #8B3A3A;
+  height: 50px;
   padding: 20px;
   color: white;
+  width: 100vw;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: 10;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-links {
+  margin-right: 5em;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #f0f0f0;
 }
 
 .App-title {
@@ -22,7 +51,117 @@
   font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.content {
+  display: flex;
+  flex-direction: column;
+  padding: 1em;
+  justify-content: center;
+}
+
+.project-cards {
+  display: flex;
+  margin-left: 1em;
+  margin-right: 1em;
+  margin-top: 0;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+
+
+#home, #about, #exp, #blog, #contact {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+#home, #about, #exp, #contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#home * {
+  margin: 1em;
+}
+
+#about {
+  font-size: 20px;
+}
+
+.about-stuff {
+  font-size: 15px;
+  text-transform: uppercase;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 1em;
+}
+
+.about-stuff div {
+  margin: 1em;
+}
+
+.about-text {
+  margin: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.about-top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1em;
+}
+
+.title {
+font-family: Yu Gothic Light, Arial;
+font-size: 30px;
+display: block;
+padding-bottom: 10px;
+border-bottom: 1px solid #000;
+letter-spacing: 3px;
+}
+
+.text {
+font-family: Yu Gothic UI Light, Arial;
+font-size: 10px;
+letter-spacing: 1px;
+padding-bottom: 4px;
+}
+
+.links {
+font-size: 11px;
+font-family: Yu Gothic UI Light, Arial;
+letter-spacing: 1px;
+text-transform: uppercase;
+}
+
+.home {
+  text-align: center;
+}
+
+.blog div {
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog-posts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.blog * {
+  flex-direction: column;
 }
